<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/story_card"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/card_large_corner_radius"
    tools:showIn="@layout/fragment_stories_list">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/story_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/content_description_story_image_preview"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"/>

        <TextView
            android:id="@+id/story_name"
            style="@style/CardLargePrimaryTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/caption_stories_viewer_no_story_title_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/story_preview"
            tools:layout_editor_absoluteX="0dp"/>

        <TextView
            android:id="@+id/story_text"
            style="@style/CardLargeSecondaryTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/caption_stories_viewer_no_story_text_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/story_name"
            tools:layout_editor_absoluteX="0dp"/>

        <LinearLayout
            style="?android:buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/story_text"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/share_story"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_share_story"/>

            <Button
                android:id="@+id/edit_story"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_edit_story"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>